Process response from server